force-app/main/default/objects/DD_Log__c/DD_Log__c.object-meta.xml
<CustomObject>
    <label>DD Log</label>
    <nameField>
        <label>DD Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DD Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>