force-app/main/default/objects/DD_Log__c/fields/Collection_Name__c.field-meta.xml
<CustomField>
    <fullName>Collection_Name__c</fullName>
    <formula>DD_Work_Order__r.Collection_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Name</label>
    <type>Text</type>
</CustomField>