force-app/main/default/objects/DD_Log__c/fields/DD_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>DD_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DD Work Order</label>
    <referenceTo>DD_Work_Order__c</referenceTo>
    <relationshipLabel>DD Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>