force-app/main/default/objects/DD_Log__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <label>Errors</label>
    <length>13000</length>
    <type>LongTextArea</type>
</CustomField>