force-app/main/default/objects/DD_Log__c/fields/Is_Parent_Log__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Parent Log</label>
    <type>Checkbox</type>
</CustomField>