force-app/main/default/objects/DD_Log__c/fields/Records_Generated__c.field-meta.xml
<CustomField>
    <fullName>Records_Generated__c</fullName>
    <label>Records Generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>