force-app/main/default/objects/DD_Log__c/fields/Stop_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Stop_Timestamp__c</fullName>
    <label>Stop Timestamp</label>
    <type>DateTime</type>
</CustomField>