force-app/main/default/objects/DD_Log__c/fields/Time_Elapsed_s__c.field-meta.xml
<CustomField>
    <fullName>Time_Elapsed_s__c</fullName>
    <label>Time Elapsed (s)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>