force-app/main/default/objects/DD_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Timestamp__c</columns>
    <columns>Stop_Timestamp__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>