force-app/main/default/objects/DD_Log__c/listViews/Child_Logs.listView-meta.xml
<ListView>
    <fullName>Child_Logs</fullName>
    <columns>NAME</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Timestamp__c</columns>
    <columns>Stop_Timestamp__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Log__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Child Logs</label>
</ListView>