force-app/main/default/objects/DD_Log__c/listViews/Parent_Logs.listView-meta.xml
<ListView>
    <fullName>Parent_Logs</fullName>
    <columns>DD_Work_Order__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Records_Generated__c</columns>
    <columns>Time_Elapsed_s__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Log__c</field>
        <operation>equals</operation>
    </filters>
    <label>Parent Logs</label>
</ListView>